--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form.yml
@@ -6,6 +6,11 @@ services:
 
   PrestaShopBundle\Form\FormCloner: ~
 
+  form.form_cloner:
+    alias: PrestaShopBundle\Form\FormCloner
+    public: true
+    deprecated: ~
+
   form.form_builder_modifier:
     class: PrestaShopBundle\Form\FormBuilderModifier
     public: true
