--- a/src/PrestaShopBundle/Resources/config/services/adapter/product/_pack.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/product/_pack.yml
@@ -26,13 +26,11 @@ services:
         command: PrestaShop\PrestaShop\Core\Domain\Product\Pack\Command\RemoveAllProductsFromPackCommand
 
   PrestaShop\PrestaShop\Adapter\Product\Pack\QueryHandler\GetPackedProductsHandler:
+    autowire: true
+    public: false
     arguments:
-      - '@=service("prestashop.adapter.legacy.context").getContext().language.id'
-      - '@PrestaShop\PrestaShop\Adapter\Product\Pack\Repository\ProductPackRepository'
-      - '@PrestaShop\PrestaShop\Adapter\Attribute\Repository\AttributeRepository'
-      - '@PrestaShop\PrestaShop\Core\Product\Combination\NameBuilder\CombinationNameBuilderInterface'
-      - '@PrestaShop\PrestaShop\Adapter\Product\Image\Repository\ProductImageRepository'
-      - '@translator'
+      $defaultLangId: '@=service("prestashop.adapter.legacy.context").getContext().language.id'
+      $translator: '@translator'
     tags:
       - name: tactician.handler
         command: PrestaShop\PrestaShop\Core\Domain\Product\Pack\Query\GetPackedProducts
