CI : UI Tests (Fixed typo)

--- a/.github/workflows/sanity-productV2.yml
+++ b/.github/workflows/sanity-productV2.yml
@@ -14,7 +14,7 @@ jobs:
 
   sanity:
     runs-on: ubuntu-latest
-    name: Sanity product V2
+    name: Sanity Product V2
     strategy:
       matrix:
         php: [ '7.2', '7.3', '7.4', '8.0', '8.1' ]
