--- a/src/PrestaShopBundle/Resources/config/services/core/form/form_data_provider.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/form/form_data_provider.yml
@@ -189,6 +189,7 @@ services:
     class: 'PrestaShop\PrestaShop\Core\Form\IdentifiableObject\DataProvider\ProductImageFormDataProvider'
     arguments:
       - '@prestashop.core.query_bus'
+      - '@=service("prestashop.adapter.legacy.context").getContext().shop.id'
 
   prestashop.core.form.identifiable_object.data_provider.zone_form_data_provider:
     class: 'PrestaShop\PrestaShop\Core\Form\IdentifiableObject\DataProvider\ZoneFormDataProvider'
