--- a/src/PrestaShopBundle/Resources/config/services/core/grid/grid_data_factory.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/grid_data_factory.yml
@@ -122,6 +122,22 @@ services:
       - '@prestashop.core.grid.query.doctrine_query_parser'
       - 'customer_order'
 
+  prestashop.core.grid.data_provider.customer_bought_product:
+    class: '%prestashop.core.grid.data.factory.doctrine_grid_data_factory%'
+    arguments:
+      - '@prestashop.core.grid.query_builder.customer_bought_product'
+      - '@prestashop.core.hook.dispatcher'
+      - '@prestashop.core.grid.query.doctrine_query_parser'
+      - 'customer_bought_product'
+
+  prestashop.core.grid.data_provider.customer_viewed_product:
+    class: '%prestashop.core.grid.data.factory.doctrine_grid_data_factory%'
+    arguments:
+      - '@prestashop.core.grid.query_builder.customer_viewed_product'
+      - '@prestashop.core.hook.dispatcher'
+      - '@prestashop.core.grid.query.doctrine_query_parser'
+      - 'customer_viewed_product'
+
   prestashop.core.grid.data_provider.customer_address_decorator:
     class: 'PrestaShop\PrestaShop\Core\Grid\Data\Factory\CustomerAddressGridDataFactoryDecorator'
     arguments:
