--- a/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/features.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/features.yml
@@ -7,6 +7,13 @@ admin_features_index:
     _legacy_controller: AdminFeatures
     # _legacy_link: AdminFeatures
 
+admin_features_horizontal_index:
+  path: /horizontal
+  methods: [ GET, POST ]
+  defaults:
+    _controller: PrestaShopBundle\Controller\Admin\Sell\Catalog\FeatureController::horizontalIndexAction
+    _legacy_controller: AdminFeatures
+
 admin_features_search:
   path: /
   methods: [ POST ]
