--- a/.github/workflows/cron_nightly_tests_reusable.yml
+++ b/.github/workflows/cron_nightly_tests_reusable.yml
@@ -105,6 +105,11 @@ jobs:
           docker-compose -f docker-compose.yml up -d --build
           bash -c 'while [[ "$(curl -L -s -o /dev/null -w %{http_code} http://localhost:8001/en/)" != "200" ]]; do sleep 5; done'
 
+      # Workaround until https://github.com/PrestaShop/PrestaShop/issues/29813 is fixed
+      - name: PrestaShop Configuration (Copy of Config API)
+        if: (env.GH_BRANCH == '8.1.x') || (env.GH_BRANCH == 'develop')
+        run: cp ./app/config/security_dev.yml ./app/config/security_prod.yml
+
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
