code review fixes

--- a/src/PrestaShopBundle/Resources/config/services/adapter/kpi.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/kpi.yml
@@ -104,14 +104,12 @@ services:
       - '@translator'
       - "@prestashop.adapter.legacy.context"
 
-  prestashop.adapter.kpi.messages_per_thread:
-    class: 'PrestaShop\PrestaShop\Adapter\Kpi\MessagesPerThreadKpi'
+  PrestaShop\PrestaShop\Adapter\Kpi\MessagesPerThreadKpi:
     arguments:
       - '@translator'
       - "@prestashop.adapter.legacy.context"
 
-  prestashop.adapter.kpi.pending_discussion_threads:
-    class: 'PrestaShop\PrestaShop\Adapter\Kpi\PendingDiscussionThreadsKpi'
+  PrestaShop\PrestaShop\Adapter\Kpi\PendingDiscussionThreadsKpi:
     arguments:
       - '@translator'
       - "@prestashop.adapter.legacy.context"
