fixed issues after rebase

--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_handler.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_handler.yml
@@ -591,4 +591,5 @@ services:
       - '@prestashop.core.hook.dispatcher'
       - '@PrestaShopBundle\Form\Admin\CustomerService\CustomerThread\ContactOptionsFormDataProvider'
       - 'PrestaShopBundle\Form\Admin\CustomerService\CustomerThread\ContactOptionType'
+      - 'ContactOptions'
       - 'contact_options'
