--- a/src/PrestaShopBundle/Resources/config/services/adapter/country.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/country.yml
@@ -31,19 +31,19 @@ services:
       - { name: 'tactician.handler', command: 'PrestaShop\PrestaShop\Core\Domain\Country\Command\AddCountryCommand' }
 
   PrestaShop\PrestaShop\Adapter\Country\CommandHandler\DeleteCountryHandler:
-    public: true
+    public: false
     autowire: true
     tags:
       - { name: 'tactician.handler', command: 'PrestaShop\PrestaShop\Core\Domain\Country\Command\DeleteCountryCommand' }
 
   PrestaShop\PrestaShop\Adapter\Country\CommandHandler\EditCountryHandler:
-    public: true
+    public: false
     autowire: true
     tags:
       - { name: 'tactician.handler', command: 'PrestaShop\PrestaShop\Core\Domain\Country\Command\EditCountryCommand' }
 
   PrestaShop\PrestaShop\Adapter\Country\QueryHandler\GetCountryForEditingHandler:
-    public: true
+    public: false
     autowire: true
     tags:
       - { name: 'tactician.handler', command: 'PrestaShop\PrestaShop\Core\Domain\Country\Query\GetCountryForEditing' }
