--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
@@ -26,7 +26,7 @@ services:
       $saveFormLocaleChoice: "@=service('prestashop.adapter.legacy.configuration').getBoolean('PS_BO_ALLOW_EMPLOYEE_FORM_LANG')"
       $defaultFormLanguageId: "@=service('prestashop.adapter.legacy.context').getContext().cookie.employee_form_lang"
       $isDebug: '@=service("prestashop.adapter.environment").isDebug()'
-      $multistoreFeature: '@prestashop.adapter.feature.multistore'
+      $multiStoreFeature: '@prestashop.adapter.feature.multistore'
       $contextShopId: '@=service("prestashop.adapter.legacy.context").getContext().shop.id'
       $contextLangId: '@=service("prestashop.adapter.legacy.context").getContext().language.id'
       $contextLanguageId: '@=service("prestashop.adapter.legacy.context").getContext().language.id'
@@ -558,9 +558,7 @@ services:
   PrestaShopBundle\Form\Admin\Sell\Product\Stock\StockOptionsType:
   PrestaShopBundle\Form\Admin\Sell\Product\Stock\VirtualProductFileType:
     arguments:
-      $locales: "@=service('prestashop.adapter.legacy.context').getLanguages()"
       $maxFileSizeInMegabytes: "@=service('prestashop.adapter.legacy.configuration').getInt('PS_ATTACHMENT_MAXIMUM_SIZE')"
-      $router: "@router"
       $virtualProductFileListener: '@PrestaShopBundle\Form\Admin\Sell\Product\EventListener\VirtualProductFileListener'
   PrestaShopBundle\Form\Admin\Sell\Product\EventListener\VirtualProductFileListener:
 
