leave FeatureValueRepository public as it still accessed directly

--- a/src/PrestaShopBundle/Resources/config/services/adapter/feature.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/feature.yml
@@ -68,4 +68,4 @@ services:
 
   PrestaShop\PrestaShop\Adapter\Feature\Repository\FeatureValueRepository:
     autowire: true
-    public: false
+    public: true
