implement grid definition and show simple grid without actions

--- a/src/PrestaShopBundle/Resources/config/routing/admin/configure/shop_parameters/_shop_parameters.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/configure/shop_parameters/_shop_parameters.yml
@@ -30,6 +30,10 @@ _contacts:
   resource: "contacts.yml"
   prefix: /contacts/
 
+_stores:
+  resource: "stores.yml"
+  prefix: /stores/
+
 _order_states:
   resource: "order_states.yml"
   prefix: /order-states/
