--- a/src/PrestaShopBundle/Resources/config/services/core/grid/doctrine_query_builder.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/doctrine_query_builder.yml
@@ -521,3 +521,11 @@ services:
     arguments:
       $searchCriteriaApplicator: '@prestashop.core.query.doctrine_search_criteria_applicator'
       $contextLangId: "@=service('prestashop.adapter.legacy.context').getContext().language.id"
+
+  PrestaShop\PrestaShop\Core\Grid\Query\StoreQueryBuilder:
+    autowire: true
+    public: false
+    parent: 'prestashop.core.grid.abstract_query_builder'
+    arguments:
+      $shopIds: '@=service("prestashop.adapter.shop.context").getContextListShopID()'
+      $languageId: '@=service("prestashop.adapter.legacy.context").getContext().language.id'
