--- a/src/PrestaShopBundle/Resources/config/routing/admin/configure/shop_parameters/stores.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/configure/shop_parameters/stores.yml
@@ -1,8 +1,18 @@
 admin_stores_index:
   path: /
-  methods: GET
+  methods: [ GET ]
   defaults:
     _controller: 'PrestaShopBundle\Controller\Admin\Configure\ShopParameters\StoreController::indexAction'
     _legacy_controller: AdminStores
     # @todo; uncomment legacy link when page is fully migrated and ready to be displayed by default
     # _legacy_link: AdminStores
+
+admin_stores_search:
+  path: /
+  methods: [ POST ]
+  defaults:
+    _controller: PrestaShopBundle\Controller\Admin\CommonController::searchGridAction
+    _legacy_controller: AdminStores
+    _legacy_link: AdminStores
+    gridDefinitionFactoryServiceId: PrestaShop\PrestaShop\Core\Grid\Definition\Factory\StoreGridDefinitionFactory
+    redirectRoute: admin_stores_index
