--- a/src/PrestaShopBundle/Resources/config/services/core/grid/grid_definition_factory.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/grid_definition_factory.yml
@@ -414,5 +414,5 @@ services:
 
   PrestaShop\PrestaShop\Core\Grid\Definition\Factory\StoreGridDefinitionFactory:
     parent: 'prestashop.core.grid.definition.factory.abstract_grid_definition'
-    public: false
+    public: true
     autowire: true
